# trabajo-final-programacion-iii

./: CMakeLists.txt  README.md
Inventario/: Inventariado Fisico.csv
data/: inventarioFisico.csv
src/: main.cpp
src/constants/: Structs.h
src/csv/: CSVReader.cpp  CSVReader.h
src/deposit/: DepositTree.cpp  DepositTree.h
src/map/: ArticlesMap.cpp  ArticlesMap.h
src/utils/: Utils.h
src/utils/csv/: CSVReader.cpp  CSVReader.h
src/utils/deposit/: DepositTree.cpp  DepositTree.h
src/utils/map/: ArticlesMap.cpp  ArticlesMap.h
src/utils/validations/: validaciones.cpp  validaciones.h
